@@ -1,5 +1,5 @@
 Elasticsearch-Carrot2
-Copyright 2013-2019 Carrot Search s.c.
+Copyright 2013-2021 Carrot Search s.c.
 
 This product includes software developed by The Apache Software
 Foundation (http://www.apache.org/).
